[gd_scene load_steps=4 format=4 uid="uid://lix6iem5d0ce"]

[ext_resource type="Script" uid="uid://dbg5nhuujbco5" path="res://scenes/levels/TavernTutorial/TavernTutorial.gd" id="1_7xgat"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_oo3bk"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_qb2ki"]

[node name="TavernTutorial" type="Node2D" unique_id=1864347108]
script = ExtResource("1_7xgat")

[node name="Ground" type="TileMapLayer" parent="." unique_id=492551207]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD+////AAAWAAAAAAD9////AAAVAAAAAAD8/wAAAAAWAAAAAAD9/wAAAAAWAAAAAAD+/wAAAAAVAAAAAAD//wAAAAAVAAAAAAAAAAAAAAAVAAAAAAD5/wAAAAAWAAAAAAD6/wAAAAAVAAAAAAD7/wAAAAAVAAAAAAABAAAAAAAVAAAAAAACAAAAAAAWAAAAAAADAAAAAAAVAAAAAAAEAAAAAAAWAAAAAAAEAAEAAAAWAAAAAAADAAEAAAAVAAAAAAACAAEAAAAWAAAAAAABAAEAAAAVAAAAAAAAAAEAAAAWAAAAAAD//wEAAAAVAAAAAAD+/wEAAAAVAAAAAAD9/wEAAAAVAAAAAAD8/wEAAAAWAAAAAAD7/wEAAAAVAAAAAAD6/wEAAAAWAAAAAAD5/wEAAAAVAAAAAAD5/wIAAAAVAAAAAAD6/wIAAAAVAAAAAAD7/wIAAAAVAAAAAAD8/wIAAAAVAAAAAAD9/wIAAAAVAAAAAAD+/wIAAAAVAAAAAAD//wIAAAAVAAAAAAAAAAIAAAAWAAAAAAABAAIAAAAWAAAAAAACAAIAAAAXAAAAAAADAAIAAAAVAAAAAAAEAAIAAAAVAAAAAAAEAAMAAAAWAAAAAAADAAMAAAAVAAAAAAACAAMAAAAWAAAAAAABAAMAAAAWAAAAAAAAAAMAAAAWAAAAAAD//wMAAAAWAAAAAAD+/wMAAAAWAAAAAAD9/wMAAAAWAAAAAAD8/wMAAAAVAAAAAAD7/wMAAAAWAAAAAAD6/wMAAAAWAAAAAAD5/wMAAAAWAAAAAAD/////AAAVAAAAAAD///7/AAAWAAAAAAD///3/AAAVAAAAAAD+//3/AAAWAAAAAAD9//7/AAAWAAAAAAD8//7/AAAWAAAAAAD8////AAAVAAAAAAD7////AAAWAAAAAAD7//7/AAAWAAAAAAD7//3/AAAVAAAAAAD7//z/AAAVAAAAAAD8//z/AAAWAAAAAAD8//3/AAAWAAAAAAD9//3/AAAXAAAAAAD+//7/AAAVAAAAAAD6//z/AAAWAAAAAAAAAP3/AAAWAAAAAAABAP3/AAAWAAAAAAABAP7/AAAWAAAAAAABAP//AAAWAAAAAAACAP7/AAAVAAAAAAADAP7/AAAVAAAAAAAEAP7/AAAWAAAAAAAEAP3/AAAWAAAAAAADAP3/AAAWAAAAAAACAP3/AAAVAAAAAAACAPz/AAAUAAAAAAADAPz/AAAWAAAAAAAEAPz/AAAUAAAAAAAAAP7/AAAWAAAAAAAAAP//AAAWAAAAAAACAP//AAAWAAAAAAADAP//AAAVAAAAAAAEAP//AAAVAAAAAAAAAPz/AAAWAAAAAAD9/wQAAAAWAAAAAAA=")
tile_set = ExtResource("2_oo3bk")

[node name="Floor" type="TileMapLayer" parent="." unique_id=166611765]
z_index = 1
texture_filter = 1
tile_map_data = PackedByteArray("AAD8//3/AAAdAAgAAAD8//7/AAAdAAkAAAD8////AAAdAAoAAAD9//3/AAAeAAgAAAD9//7/AAAeAAkAAAD9////AAAeAAoAAAD+//3/AAAfAAgAAAD+//7/AAAfAAkAAAD+////AAAfAAoAAAAAAPz/AAAEAAsAAAD6//z/AAAFAAoAAAACAPz/AAAIABMAAAADAPz/AAAIABQAAAAEAPz/AAAIABIAAADt//j/AAAIABMAAADu//j/AAAIABQAAADv//j/AAAIABIAAAABAPz/AAAAAAgAAAAFAPz/AAAEAAkAAAD9//z/AAABAAgAAAD+//z/AAACAAkAAAD///z/AAADAAkAAAA=")
tile_set = ExtResource("2_oo3bk")

[node name="PressPlates" type="TileMapLayer" parent="." unique_id=632366641]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_oo3bk")

[node name="Liquids" type="TileMapLayer" parent="." unique_id=232099879]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_oo3bk")

[node name="Walls" type="TileMapLayer" parent="." unique_id=295440094]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAP//AAAJAAwAAAAAAP7/AAAIAAoAAAADAP//AAAPAAwAAAACAP//AAANAA0AAAD6/wAAAAAUABUAAAD7/wAAAAAVABUAAAAFAPz/AAA/AAQAAAAFAP3/AAAEAAkAAAAFAP7/AAAEAAkAAAAFAP//AAAEAAkAAAD6//7/AAAAAAcAAAD6////AAADAAgAAAD5////AAACAAkAAAD4////AAAFAAYAAAD4/wAAAAAEAAcAAAD4/wEAAAAEAAcAAAD4/wIAAAAEAAcAAAD4/wMAAAAEAAcAAAD4/wQAAAABAAgAAAD5/wQAAAACAAkAAAD6/wQAAAACAAkAAAD7/wQAAAACAAkAAAD8/wQAAAADAAkAAAD+/wQAAAABAAkAAAD//wQAAAACAAkAAAAAAAQAAAACAAkAAAABAAQAAAACAAkAAAACAAQAAAACAAkAAAADAAQAAAACAAkAAAAEAAQAAAACAAkAAAAFAAQAAAADAAgAAAAFAAAAAAAEAAkAAAAFAAEAAAAEAAkAAAAFAAIAAAAEAAkAAAAFAAMAAAAEAAkAAAAEAP//AAALAA0AAAD9/wQAAAAEAAsAAAD6//3/AAAAAAYAAAD//wEAAAAKABMAAAACAPz/AAA/AAQAAAADAPz/AAA/AAQAAAAEAPz/AAA/AAQAAAABAPz/AAA/AAQAAAD6//z/AAA/AAQAAAD7//z/AAA/AAQAAAD8//z/AAA/AAQAAAD9//z/AAA/AAQAAAD+//z/AAA/AAQAAAD///z/AAA/AAQAAAAAAPz/AAA/AAQAAAA=")
tile_set = ExtResource("2_oo3bk")

[node name="Trails" type="TileMapLayer" parent="." unique_id=1531303081]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_oo3bk")

[node name="Items" type="TileMapLayer" parent="." unique_id=70121628]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_oo3bk")

[node name="Demolitonist" parent="Items" unique_id=1633032585 instance=ExtResource("3_qb2ki")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="." unique_id=1893759274]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD//wEAAAAKABMAAAD7/wAAAAAVABUAAAD6//z/AAA/AAgAAAA=")
tile_set = ExtResource("2_oo3bk")

[node name="BadItems" type="TileMapLayer" parent="." unique_id=1044491747]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAABAP//AAAJAA8AAAD+/wMAAAALABUAAAD//wMAAAAMABUAAAD6/wMAAAALABUAAAD7/wMAAAAMABUAAAD5/wIAAAAKAA4AAAD6/wIAAAALAA4AAAD6/wEAAAAOABMAAAD5/wAAAAAOABMAAAD5/wMAAAAXABMAAAABAAIAAAAKAA4AAAACAAIAAAALAA4AAAD+/wEAAAAOABMAAAABAAEAAAAOABMAAAACAAEAAAAOABMAAAAAAAEAAAAOABMAAAD9//3/AAAKAA4AAAD+//3/AAALAA4AAAD9/wAAAAAIAA4AAAADAAIAAAAMABQAAAA=")
tile_set = ExtResource("2_oo3bk")

[node name="GoodItems" type="TileMapLayer" parent="." unique_id=945799534]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD5/wAAAAAPABQAAAD5/wIAAAAVABMAAAD5/wMAAAAYABMAAAD6/wEAAAAbABQAAAD6/wIAAAAWABMAAAD6/wMAAAARABUAAAD7/wMAAAASABUAAAD+/wMAAAAPABUAAAD//wMAAAAQABUAAAABAAIAAAAJAA0AAAACAAIAAAALAA0AAAABAP//AAAOAAwAAAD+/wEAAAAOABIAAAABAAEAAAAOABIAAAACAAEAAAAOABIAAAADAAIAAAAOABQAAAAAAAEAAAAOABIAAAD9//3/AAAMAAoAAAD+//3/AAANAAoAAAA=")
tile_set = ExtResource("2_oo3bk")

[node name="MovingItems" type="TileMapLayer" parent="." unique_id=1010202936]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_set = ExtResource("2_oo3bk")
